SortExpression refactoring (from Record to (non-PM) class)