@@ -107,8 +107,8 @@ class SortClauseBuilderTest {
 
       assertThat(sortClause).isNotNull();
       assertThat(sortClause.sortExpressions()).hasSize(1);
-      assertThat(sortClause.sortExpressions().get(0).path()).isEqualTo("$vector");
-      assertThat(sortClause.sortExpressions().get(0).vector())
+      assertThat(sortClause.sortExpressions().getFirst().getPath()).isEqualTo("$vector");
+      assertThat(sortClause.sortExpressions().getFirst().getVector())
           .containsExactly(new Float[] {0.11f, 0.22f, 0.33f});
     }
 
@@ -129,8 +129,8 @@ class SortClauseBuilderTest {
 
       assertThat(sortClause).isNotNull();
       assertThat(sortClause.sortExpressions()).hasSize(1);
-      assertThat(sortClause.sortExpressions().get(0).path()).isEqualTo("$vector");
-      assertThat(sortClause.sortExpressions().get(0).vector())
+      assertThat(sortClause.sortExpressions().getFirst().getPath()).isEqualTo("$vector");
+      assertThat(sortClause.sortExpressions().getFirst().getVector())
           .containsExactly(new Float[] {0.11f, 0.22f, 0.33f});
     }
 
@@ -151,8 +151,8 @@ class SortClauseBuilderTest {
 
       assertThat(sortClause).isNotNull();
       assertThat(sortClause.sortExpressions()).hasSize(1);
-      assertThat(sortClause.sortExpressions().get(0).path()).isEqualTo("$vector");
-      assertThat(sortClause.sortExpressions().get(0).vector())
+      assertThat(sortClause.sortExpressions().getFirst().getPath()).isEqualTo("$vector");
+      assertThat(sortClause.sortExpressions().getFirst().getVector())
           .containsExactly(new Float[] {0.11f, 0.22f, 0.33f});
     }
 
@@ -248,8 +248,8 @@ class SortClauseBuilderTest {
 
       assertThat(sortClause).isNotNull();
       assertThat(sortClause.sortExpressions()).hasSize(1);
-      assertThat(sortClause.sortExpressions().get(0).path()).isEqualTo("$vectorize");
-      assertThat(sortClause.sortExpressions().get(0).vectorize()).isEqualTo("test data");
+      assertThat(sortClause.sortExpressions().getFirst().getPath()).isEqualTo("$vectorize");
+      assertThat(sortClause.sortExpressions().getFirst().getVectorize()).isEqualTo("test data");
     }
 
     @Test
@@ -315,21 +315,6 @@ class SortClauseBuilderTest {
       assertThat(throwable).isInstanceOf(JsonApiException.class);
       assertThat(throwable.getMessage())
           .contains("Vector search can't be used with other sort clause");
-    }
-
-    @Test
-    public void mustTrimPath() throws Exception {
-      String json =
-          """
-              {"some.path " : 1}
-          """;
-
-      SortClause sortClause = deserializeSortClause(json);
-
-      assertThat(sortClause).isNotNull();
-      assertThat(sortClause.sortExpressions())
-          .hasSize(1)
-          .contains(SortExpression.sort("some.path", true));
     }
 
     @Test
